data used for zipping is stored in a single directory